--- a/ServerConfig.json
+++ b/ServerConfig.json
@@ -1,24 +1,15 @@
 {
     "zookeeper": {
-        "hosts": "192.168.2.80:2181,192.168.2.81:2181,192.168.2.82:2181",
+        "hosts": "127.0.0.1:2379",
         "root": "/cloudtask"
     },
     "serverconfig": {
-        "websitehost": "http://192.168.2.80:8091",
-        "centerhost": "http://192.168.2.80:8985",
+        "websitehost": "http://127.0.0.1:8091",
+        "centerhost": "http://127.0.0.1:8985",
         "storagedriver": {
             "mongo": {
-                "hosts": "192.168.2.80:27017,192.168.2.81:27017,192.168.2.82:27017",
-                "database": "cloudtask",
-                "auth": {
-                    "user": "datastoreAdmin",
-                    "password": "ds4dev"
-                },
-                "options": [
-                    "maxPoolSize=20",
-                    "replicaSet=mgoCluster",
-                    "authSource=admin"
-                ]
+                "hosts": "127.0.0.1:27017",
+                "database": "cloudtask"
             }
         }
     }
